--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ img.self-photo {
     color: #efefef;
 }
 .univ-bg {
-    background-image: url("./../images/University_Life_BG.png");
+    background-image: url("University_Life_BG.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
@@ -137,7 +137,7 @@ img.self-photo {
     color: #393939
 }
 .club-bg {
-    background-image: url("./../images/Club_Activities_BG.png");
+    background-image: url("Club_Activities_BG.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
